--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,10 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
+    testImplementation 'com.codeborne:selenide:5.19.0'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
