--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'io.rest-assured:rest-assured:4.3.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
-    testImplementation 'com.codeborne:selenide:5.19.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'com.codeborne:selenide:5.23.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
+    testImplementation("io.github.bonigarcia:webdrivermanager:4.4.3")
 }
 
 test {
